# jobshop-web

./: .README.md  .gitignore  Procfile  README.md  pyproject.toml  setup.sh
.streamlit/: config.toml
jobshop_sp/: app.py
jobshop_sp/_pages/: about.py  disjunctiveJSSP.py  disjunctiveJSSP2.py  disjunctiveJSSP_formulation.py  rankBasedJSSP.py  timeIndexedJSSP.py  utils.py
jobshop_sp/config/: params.py
jobshop_sp/formulations/: disjunctiveJSSP.md  disjunctiveJSSP2.md  rankBasedJSSP.md  timeIndexedJSSP.md
jobshop_sp/optim/: disjunctiveJSSP.py  disjunctiveJSSP2.py  rankBasedJSSP.py  timeIndexedJSSP.py
jobshop_web/: app.py  utils.py
jobshop_web/_pages/: about.py  disjunctiveJSSP.py  disjunctiveJSSP2.py  rankBasedJSSP.py  timeIndexedJSSP.py  utils.py
jobshop_web/config/: params.py  paths.py
jobshop_web/formulations/: disjunctiveJSSP.md  disjunctiveJSSP2.md  rankBasedJSSP.md  timeIndexedJSSP.md
jobshop_web/optim/: __init__.py  disjunctiveJSSP.py  disjunctiveJSSP2.py  model_base.py  rankBasedJSSP.py  timeIndexedJSSP.py
optplan/: app.py  utils.py
optplan/_pages/: about.py  jobshop.py  jobshop_formulation.py  utils.py
optplan/config/: params.py  paths.py
optplan/optim/: jobshop.py
optplann/: app.py
optplann/_pages/: about.py  jobshop.py  jobshop_formulation.py  utils.py
optplann/config/: params.py
optplann/formulations/: jobshop.md
optplann/optim/: jobshop.py
