[tool.poetry]
name = "optplan"
version = "0.1.0"
description = ""
authors = ["Antonio Júnior <juniorssz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.0"
streamlit = "^1.13.0"
streamlit-option-menu = "^0.3.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
