[tool.poetry]
name = "jobshop-sp"
version = "0.1.0"
description = ""
authors = ["Antonio Júnior <juniorssz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^1.5.0"
streamlit = "^1.13.0"
streamlit-option-menu = "^0.3.2"
Pyomo = "^6.4.2"
glpk = "^0.4.6"
plotly = "^5.10.0"
streamlit-aggrid = "^0.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
ipykernel = "^6.16.0"
nbformat = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
